Bug 57688 - Fix warnings introduced by redundant type cast in g_slist_free_all call
Summary: Fix warnings introduced by redundant type cast in g_slist_free_all call
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: libfprint (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-29 14:19 UTC by Vasily Khoruzhick
Modified: 2012-11-29 14:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-AES-drivers-drop-redudant-type-cast-in-g_slist_free_.patch (2.14 KB, patch)
2012-11-29 14:19 UTC, Vasily Khoruzhick
Details | Splinter Review

Description Vasily Khoruzhick 2012-11-29 14:19:13 UTC

    
Comment 1 Vasily Khoruzhick 2012-11-29 14:19:42 UTC
Created attachment 70791 [details] [review]
0001-AES-drivers-drop-redudant-type-cast-in-g_slist_free_.patch
Comment 2 Bastien Nocera 2012-11-29 14:37:47 UTC
commit c02cb3083d90099f8993d2531ffa1ff357cfc963
Author: Vasily Khoruzhick <anarsoul@gmail.com>
Date:   Thu Nov 29 17:16:33 2012 +0300

    AES-drivers: drop redudant type cast in g_slist_free_full call
    
    https://bugs.freedesktop.org/show_bug.cgi?id=57688


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.