AES-drivers: drop redudant type cast in g_slist_free_full call

https://bugs.freedesktop.org/show_bug.cgi?id=57688